# llm-sleep

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  BIOLOGY.md
dreamer/: __init__.py  config.default.yaml  config.py  profiles.yaml
dreamer/cli/: main.py
dreamer/consolidation/: __init__.py  gate.py
dreamer/memory/: __init__.py  salience.py  store.py
dreamer/orchestrator/: __init__.py  scheduler.py
dreamer/providers/: __init__.py  _openai_http.py  anthropic.py  base.py  custom.py  google.py  openai.py
dreamer/stages/: __init__.py  prompts.py  runner.py
examples/: seed_memories.jsonl
skills/: README.md
skills/claude-code/: SKILL.md
skills/codex/: AGENTS.md
skills/opencode/: skill.md
tests/: test_config.py  test_memory_store.py  test_orchestrator_fake.py  test_salience.py
